cluster/apps/organizers/lidarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: organizers
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`lidarr.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: ${SECRET_CERT}
